# adb_scr_py

./: .gitattributes  .gitignore  MANIFEST.in  README.md  build.sh  pyproject.toml  setup.py  test.sh
native_code/macOS/: CMakeLists.txt
native_code/macOS/include/: jpg_encoder.h  vtb_decoder.h  vtb_helper.h
native_code/macOS/src/: adb_scr_media.c  jpg_encoder.c  vtb_decoder.c  vtb_helper.c
src/adb_scr/: __init__.py  consts.py  exceptions.py  logger.py
src/adb_scr/adb_cmd/: base.py  device_control.py
src/adb_scr/device/: android_device.py  bin_utils.py  control_handle.py  tcp_forward_tunnel.py  types.py
src/adb_scr/media_ext/: __init__.py  _adb_scr_media.pyi
src/adb_scr/media_ext/h264/: decoder_base.py  vtb_decoder.py
tests/: test_jpg.py  test_run.py
